BOLT-25213, it not jump to the top of the promotion page in mobile view.BOLT-25214,fix promotion page in iOS

--- a/app/styles/v2/partials/pages/EditAdPage/_pageMain.scss
+++ b/app/styles/v2/partials/pages/EditAdPage/_pageMain.scss
@@ -226,10 +226,13 @@ body {
 }
 
 @include to-breakpoint($small-break) {
-	.viewport .footer-wrapper {
-		// To ensure nothing in page is covered by post button overlay
-		// Magic number 73 is the height of post button layer
-		margin-bottom: 73px;
+	.viewport {
+		overflow-x: hidden;
+		.footer-wrapper {
+			// To ensure nothing in page is covered by post button overlay
+			// Magic number 73 is the height of post button layer
+			margin-bottom: 73px;
+		}
 	}
 
 	.main-detail-post {
