--- a/app/styles/v2/partials/pages/PostAdPage/_pageMain.scss
+++ b/app/styles/v2/partials/pages/PostAdPage/_pageMain.scss
@@ -156,12 +156,15 @@ $labelMargin: 8%;
 }
 
 @include to-breakpoint($small-break) {
-	.viewport.covered .footer-wrapper {
-		// To ensure nothing in page is covered by post button overlay
-		// Magic number 49 is the one to ensure the bottom of footer is exactly at the top of overlay
-		// Actually the overlay's height is 73px, but post page will load one image which will adds to
-		// the height of body after footer, so that image's height should be calculated.
-		margin-bottom: 49px;
+	.viewport.covered {
+		overflow-x: hidden;
+		.footer-wrapper {
+			// To ensure nothing in page is covered by post button overlay
+			// Magic number 49 is the one to ensure the bottom of footer is exactly at the top of overlay
+			// Actually the overlay's height is 73px, but post page will load one image which will adds to
+			// the height of body after footer, so that image's height should be calculated.
+			margin-bottom: 49px;
+		}
 	}
 	.main-detail-post {
 		display:none;
